# jxcore

./: CMakeLists.txt  README.md
include/: jxcore.h  timers.h
include/jxcore/: console.h
src/: console.c  jxcore.c  timers.c
